i1 - responsive.css hidden overflow x, 720 screen fixed header width, subfooter text to 14px

--- a/iteration1/css/responsive.css
+++ b/iteration1/css/responsive.css
@@ -9,8 +9,12 @@
 
 @media (max-width: 1480px) {
     /**********HEADER NAVBAR***********/
+  html{
+    overflow-x: hidden;
+    }
+
  .header {
-    width: 1200px;
+    width: 100%;
     height: 96px;
     margin: auto;
   }
@@ -30,7 +34,7 @@
 
 @media (max-width: 1240px) {
     /**********HEADER NAVBAR***********/
-  .header, .nav-container {
+  .nav-container {
         width: 940px;
       }
 
@@ -134,7 +138,7 @@
 
 @media (max-width: 1080px) {
     /**********HEADER NAVBAR***********/
-  .header, .nav-container {
+  .nav-container {
         width: 860px;
       }
 
@@ -425,23 +429,27 @@
 
 @media (max-width: 720px) {
     /**********HEADER NAVBAR***********/
-  .header, .nav-container {
+    .header {
         width: 100%;
         height: 200px;
       }
 
+      .nav-container{
+        width: 460px;
+      }
+
     .nav-list {
-    width: 560px;
+    width: 420px;
     flex-wrap: wrap;
     }
 
     .brand{
-    width: 480px;
+    width: 460px;
     margin: 0 auto;
     }
 
     .nav-item{
-        margin: 30px;
+        margin: 30px 10px;
       }
 
     .nav-item:nth-of-type(3) {
@@ -641,7 +649,7 @@
   /*********FOOTER******/
 
   .footer, .subfooter {
-    width: 420px;
+    width: 380px;
   }
 
   .subfooter-container{
@@ -650,6 +658,11 @@
 
   .footer_section p {
     margin: 10px 0 0 0;
+    font-size: 14px;
+  }
+
+  .footer_section a {
+    font-size: 14px;
   }
 
 }
